comment add and delete calls added
